Removed profile box and added illustration

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             Tinotenda Mhedziso
           </span>
         </h1>
-        <h4>Fullstack | Game | Software Developer</h4>
+        <h4> A Software Developer</h4>
         <div id="checkCon" class="flexBox hidden">
           <p style="color: white">Your current Quests:</p>
           <div id="checklist">
@@ -554,22 +554,7 @@
       <section class="AboutMe" id="AboutSection">
         <div class="row">
           <div class="AboutC1">
-            <div class="profile-box">
-              <div class="profile-elements bg"></div>
-              <div class="profile-elements imgBx">
-                <img src="Images/Me.webp" alt="My profile picture" />
-              </div>
-              <div class="profile-elements name">
-                <h2>Tinotenda Mhedziso</h2>
-              </div>
-              <div class="profile-elements content">
-                <p>
-                  Time is the gift that robs you of the present. Let me save you
-                  some.
-                </p>
-              </div>
-              <div class="profile-card"></div>
-            </div>
+              <img src="Images/Developer activity-bro.svg" alt="Illustration about me" class="about-illustration">
           </div>
           <div class="AboutC2">
             <h3 class="subTitle bounce">About Me</h3>
