--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
       <section class="AboutMe" id="AboutSection">
         <div class="row">
           <div class="AboutC1">
-              <img src="Images/Developer activity-bro.svg" alt="Illustration about me" class="about-illustration">
+              <img src="Images/Illustrations/aboutme.svg" alt="Illustration about me" class="illustration">
           </div>
           <div class="AboutC2">
             <h3 class="subTitle bounce">About Me</h3>
@@ -954,30 +954,24 @@
           <h2 class="section-title subTitle bounce">My Skills</h2>
         </div>
         <div class="skills-container">
-          <div class="skill-card row-1 bounce">
-            <img
-              src="Images/Icons/database.svg"
-              alt="This is a computer device"
-              class="skill-icon" />
-            <h3>Database Development</h3>
+          <div class="skill-card">
+            <img src="Images/Illustrations/bot-development.svg" alt="Chatbot Building" class="illustration" />
+            <h3>Bot Building</h3>
+            <p>Developing intelligent and automated bots for various applications, enhancing efficiency and user experience.</p>            
           </div>
-          <div class="skill-card row-2 bounce">
-            <img
-              src="Images/Icons/computer.svg"
-              alt="This is a computer device"
-              class="skill-icon" />
-
+          <div class="skill-card">
+            <img src="Images/Illustrations/desktop-development.svg" alt="Desktop Development" class="illustration" />
             <h3>Desktop Development</h3>
+            <p>Building cross-platform and native desktop applications with intuitive user experiences.</p>
           </div>
-          <div class="skill-card row-1 bounce">
-            <img
-              src="Images/Icons/website.svg"
-              alt="This is a computer device"
-              class="skill-icon" />
+          <div class="skill-card">
+            <img src="Images/Illustrations/web-development.svg" alt="Web Development" class="illustration" />
             <h3>Web Development</h3>
+            <p>Creating modern, responsive, and interactive websites and web applications.</p>
           </div>
         </div>
       </section>
+      
       <!------------------------------------------------My Socials---------------------------------------------------------------------------------------->
       <section class="Socials" id="SocialsSection">
         <div class="flexBox">
