--- a/index.html
+++ b/index.html
@@ -779,9 +779,14 @@
               tested, who will stand with you when the truth is revealed?
             </p>
             <p>
+              <strong>Platforms:</strong>
+              Desktop and Laptop
+            </p>
+            <p>
               <strong>Version:</strong>
               In development
             </p>
+           
             <div class="project-tags">
               <span class="tag">APIs</span>
               <span class="tag">CSS</span>
@@ -803,13 +808,13 @@
           <div class="project-preview">
             <img
               src="Images/Previews/The Atlas Six.png"
-              alt="Project 1 Preview" />
+              alt="The Atlas Six Preview" />
           </div>
         </div>
 
         <div class="project-item" id="Passion">
           <div class="project-icon">
-            <img src="Images/Icons/ai.svg" alt="Project 2 Icon" />
+            <img src="Images/Icons/ai.svg" alt="Passion Icon" />
           </div>
           <div class="project-details">
             <h2>Passion</h2>
@@ -819,11 +824,16 @@
               relaying information about me in a more fun but effective way.
             </p>
             <p>
+              <strong>Platform:</strong>
+              Desktop, Laptop and Mobile
+            </p>
+            <p>
               <strong>Version:</strong>
               Released - 1.3
             </p>
             <div class="project-tags">
               <span class="tag">APIs</span>
+              <span class="tag">Cloud</span>
               <span class="tag">CSS</span>
               <span class="tag">GPT 4 mini</span>
               <span class="tag">JavaScript</span>
@@ -842,13 +852,13 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/Passion.webp" alt="Project 2 Preview" />
+            <img src="Images/Previews/Passion.webp" alt="Passion Preview" />
           </div>
         </div>
 
         <div class="project-item" id="CreateIT">
           <div class="project-icon">
-            <img src="Images/Icons/createIT.svg" alt="Project 2 Icon" />
+            <img src="Images/Icons/createIT.svg" alt="CreateIT Icon" />
           </div>
           <div class="project-details">
             <h2>CreateIT</h2>
@@ -857,6 +867,10 @@
               ingredients to consume APIs. CreateIT recommendS meals based on
               available ingredients, offering a practical and delicious solution
               to everyday meal planning.
+            </p>
+            <p>
+              <strong>Platforms:</strong>
+              Desktop and Laptop
             </p>
             <p>
               <strong>Version:</strong>
@@ -881,7 +895,7 @@
               <button class="ui-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/CreateIT/releases/download/Initial-Release/CreateIT.zip">
+                    href="https://github.com/Passion-Over-Pain/CreateIT/releases/download/v1.2/CreateIT.zip">
                     Download
                   </a>
                 </span>
@@ -889,13 +903,13 @@
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/CreateIT.webp" alt="Project 3 Preview" />
+            <img src="Images/Previews/CreateIT.webp" alt="CreateIT Preview" />
           </div>
         </div>
 
         <div class="project-item" id="TaskApp">
           <div class="project-icon">
-            <img src="Images/Icons/checklist.svg" alt="Project 3 Icon" />
+            <img src="Images/Icons/checklist.svg" alt="TaskApp Icon" />
           </div>
           <div class="project-details">
             <h2>Project Management App</h2>
@@ -908,6 +922,10 @@
               Administrators to manage users, Project Managers to oversee
               projects and tasks, and Systems Analysts/Web Developers to update
               task statuses.
+            </p>
+            <p>
+              <strong>Platforms:</strong>
+              Desktop and Laptop
             </p>
             <p>
               <strong>Version:</strong>
@@ -931,12 +949,12 @@
               </button>
 
               <button class="ui-btn">
-                <span>Download</span>
+                <span>Unavailable</span>
               </button>
             </div>
           </div>
           <div class="project-preview">
-            <img src="Images/Previews/ProjectApp.png" alt="Project 4 Preview" />
+            <img src="Images/Previews/ProjectApp.png" alt="TaskApp Preview" />
           </div>
         </div>
 
@@ -956,13 +974,13 @@
         <div class="skills-container">
           <div class="skill-card">
             <img src="Images/Illustrations/bot-development.svg" alt="Chatbot Building" class="illustration" />
-            <h3>Bot Building</h3>
+            <h3>Bot Development</h3>
             <p>Developing intelligent and automated bots for various applications, enhancing efficiency and user experience.</p>            
           </div>
           <div class="skill-card">
             <img src="Images/Illustrations/desktop-development.svg" alt="Desktop Development" class="illustration" />
             <h3>Desktop Development</h3>
-            <p>Building cross-platform and native desktop applications with intuitive user experiences.</p>
+            <p>Creating cross-platform and native desktop applications designed for efficiency and ease of use.</p>
           </div>
           <div class="skill-card">
             <img src="Images/Illustrations/web-development.svg" alt="Web Development" class="illustration" />
@@ -989,7 +1007,7 @@
                   class="social-profile-pic" />
                 <h2>Version Control</h2>
                 <img
-                  src="Images/Icons/linkedin.svg"
+                  src="Images/Icons/linkedin-dark.svg"
                   alt="LinkedIn Icon"
                   class="social-platform-icon" />
               </div>
@@ -1016,7 +1034,7 @@
                 <h2>Debugging Adventure</h2>
 
                 <img
-                  src="Images/Icons/dev.svg"
+                  src="Images/Icons/dev-dark.svg"
                   alt="Dev.to Icon"
                   class="social-platform-icon" />
               </div>
@@ -1043,7 +1061,7 @@
                   class="social-profile-pic" />
                 <h2>CSS Styles</h2>
                 <img
-                  src="Images/Icons/dev.svg"
+                  src="Images/Icons/dev-dark.svg"
                   alt="Dev.to Icon"
                   class="social-platform-icon" />
               </div>
@@ -1105,7 +1123,7 @@
           <div class="footer-column">
             <h4>Highlighted Skills</h4>
             <ul>
-              <li>Database Development</li>
+              <li>Bot Development</li>
               <li>Desktop Applications Development</li>
               <li>Web Applications Development</li>
             </ul>
