--- a/index.html
+++ b/index.html
@@ -986,6 +986,7 @@
             <img src="Images/Illustrations/web-development.svg" alt="Web Development" class="illustration" />
             <h3>Web Development</h3>
             <p>Creating modern, responsive, and interactive websites and web applications.</p>
+            <button id="star-button">Star on GitHub</button>
           </div>
         </div>
       </section>
