Repo Like button

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             Tinotenda Mhedziso
           </span>
         </h1>
-        <h4> A Software Developer</h4>
+        <h4>A Software Developer</h4>
         <div id="checkCon" class="flexBox hidden">
           <p style="color: white">Your current Quests:</p>
           <div id="checklist">
@@ -554,7 +554,10 @@
       <section class="AboutMe" id="AboutSection">
         <div class="row">
           <div class="AboutC1">
-              <img src="Images/Illustrations/aboutme.svg" alt="Illustration about me" class="illustration">
+            <img
+              src="Images/Illustrations/aboutme.svg"
+              alt="Illustration about me"
+              class="illustration" />
           </div>
           <div class="AboutC2">
             <h3 class="subTitle bounce">About Me</h3>
@@ -786,7 +789,7 @@
               <strong>Version:</strong>
               In development
             </p>
-           
+
             <div class="project-tags">
               <span class="tag">APIs</span>
               <span class="tag">CSS</span>
@@ -796,6 +799,10 @@
               <span class="tag">JSON</span>
             </div>
             <div class="project-buttons">
+              <button class="ui-btn">
+                <span>Hidden</span>
+              </button>
+
               <button class="ui-btn">
                 <span>Hidden</span>
               </button>
@@ -842,6 +849,10 @@
               <span class="tag">Whatsapp</span>
             </div>
             <div class="project-buttons">
+              <button class="ui-btn">
+                <span>Hidden</span>
+              </button>
+
               <button class="ui-btn">
                 <span>Hidden</span>
               </button>
@@ -900,6 +911,10 @@
                   </a>
                 </span>
               </button>
+
+              <button class="ui-btn">
+                <span onclick="starRepository(`CreateIT`)">Like Project</span>
+              </button>
             </div>
           </div>
           <div class="project-preview">
@@ -951,6 +966,13 @@
               <button class="ui-btn">
                 <span>Unavailable</span>
               </button>
+
+              <button class="ui-btn">
+                <span
+                  onclick="starRepository(`ProjectManagementApp-Assignment`)">
+                  Like Project
+                </span>
+              </button>
             </div>
           </div>
           <div class="project-preview">
@@ -973,24 +995,41 @@
         </div>
         <div class="skills-container">
           <div class="skill-card">
-            <img src="Images/Illustrations/bot-development.svg" alt="Chatbot Building" class="illustration" />
+            <img
+              src="Images/Illustrations/bot-development.svg"
+              alt="Chatbot Building"
+              class="illustration" />
             <h3>Bot Development</h3>
-            <p>Developing intelligent and automated bots for various applications, enhancing efficiency and user experience.</p>            
+            <p>
+              Developing intelligent and automated bots for various
+              applications, enhancing efficiency and user experience.
+            </p>
           </div>
           <div class="skill-card">
-            <img src="Images/Illustrations/desktop-development.svg" alt="Desktop Development" class="illustration" />
+            <img
+              src="Images/Illustrations/desktop-development.svg"
+              alt="Desktop Development"
+              class="illustration" />
             <h3>Desktop Development</h3>
-            <p>Creating cross-platform and native desktop applications designed for efficiency and ease of use.</p>
+            <p>
+              Creating cross-platform and native desktop applications designed
+              for efficiency and ease of use.
+            </p>
           </div>
           <div class="skill-card">
-            <img src="Images/Illustrations/web-development.svg" alt="Web Development" class="illustration" />
+            <img
+              src="Images/Illustrations/web-development.svg"
+              alt="Web Development"
+              class="illustration" />
             <h3>Web Development</h3>
-            <p>Creating modern, responsive, and interactive websites and web applications.</p>
-            <button id="star-button">Star on GitHub</button>
+            <p>
+              Creating modern, responsive, and interactive websites and web
+              applications.
+            </p>
           </div>
         </div>
       </section>
-      
+
       <!------------------------------------------------My Socials---------------------------------------------------------------------------------------->
       <section class="Socials" id="SocialsSection">
         <div class="flexBox">
