Shortened Like Text

--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
               </button>
 
               <button class="ui-btn">
-                <span onclick="starRepository(`CreateIT`)">Like Project</span>
+                <span onclick="starRepository(`CreateIT`)">Like</span>
               </button>
             </div>
           </div>
@@ -970,7 +970,7 @@
               <button class="ui-btn">
                 <span
                   onclick="starRepository(`ProjectManagementApp-Assignment`)">
-                  Like Project
+                  Like
                 </span>
               </button>
             </div>
