Added additional tags
1. A tag for each project stating anatomy

--- a/index.html
+++ b/index.html
@@ -794,6 +794,7 @@
               <span class="tag">APIs</span>
               <span class="tag">CSS</span>
               <span class="tag">Firebase</span>
+              <span class="tag">Game</span>
               <span class="tag">HTML</span>
               <span class="tag">JavaScript</span>
               <span class="tag">JSON</span>
@@ -840,6 +841,7 @@
             </p>
             <div class="project-tags">
               <span class="tag">APIs</span>
+              <span class="tag">Chatbot</span>
               <span class="tag">Cloud</span>
               <span class="tag">CSS</span>
               <span class="tag">GPT 4 mini</span>
@@ -890,6 +892,7 @@
             <div class="project-tags">
               <span class="tag">C#</span>
               <span class="tag">CSV</span>
+              <span class="tag">Food App</span>
               <span class="tag">Local-Database</span>
             </div>
             <div class="project-buttons">
@@ -951,6 +954,7 @@
               <span class="tag">C#</span>
               <span class="tag">React</span>
               <span class="tag">SQL Database</span>
+              <span class="tag">Task App</span>
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
