--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT"
                     target="_blank">
-                    Source Code
+                    Code
                   </a>
                 </span>
               </button>
@@ -932,14 +932,12 @@
           <div class="project-details">
             <h2>Project Management App</h2>
             <p>
-              This project management app uses ASP.NET Core Web APIs with Entity
-              Framework for the backend and SQL Server for data storage. The app
-              provides comprehensive task tracking and employee management
-              features, ensuring secure and efficient project workflow. It
-              supports role-based authentication and authorization, enabling
-              Administrators to manage users, Project Managers to oversee
-              projects and tasks, and Systems Analysts/Web Developers to update
-              task statuses.
+              This project management app utilizes ASP.NET Core Web APIs with
+              Entity Framework and SQL Server for data storage. It offers
+              comprehensive task tracking and employee management features,
+              ensuring secure and efficient project workflows. The application
+              supports role-based authentication and authorization to perform
+              actions.
             </p>
             <p>
               <strong>Platforms:</strong>
@@ -962,7 +960,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/ProjectManagementApp-Assignment"
                     target="_blank">
-                    Source Code
+                    Code
                   </a>
                 </span>
               </button>
