Fifth Project Added

--- a/index.html
+++ b/index.html
@@ -982,6 +982,69 @@
           </div>
         </div>
 
+        <div class="project-item" id="TemplatePortfolio">
+          <div class="project-icon">
+            <img
+              src="Images/Icons/portfolio.svg"
+              alt="Template Portfolio Icon" />
+          </div>
+          <div class="project-details">
+            <h2>Template Portfolio</h2>
+            <p>
+              An older version on my portfolio website built from the Knight
+              Bootstrap template.
+            </p>
+            <p>
+              <strong>Platforms:</strong>
+              Desktop, Laptop and Mobile
+            </p>
+            <p>
+              <strong>Version:</strong>
+              Released - 1.
+            </p>
+            <div class="project-tags">
+              <span class="tag">Bootstrap</span>
+              <span class="tag">CSS</span>
+              <span class="tag">Email js</span>
+              <span class="tag">HTML</span>
+              <span class="tag">JavaScript</span>
+              <span class="tag">Portfolio</span>
+              <span class="tag">Website</span>
+            </div>
+            <div class="project-buttons">
+              <button class="ui-btn">
+                <span>
+                  <a
+                    href="https://github.com/Passion-Over-Pain/Portfolio-Redesigned"
+                    target="_blank">
+                    Code
+                  </a>
+                </span>
+              </button>
+
+              <button class="ui-btn">
+                <span>
+                  <a
+                    href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
+                    target="_blank">
+                    Site
+                  </a>
+                </span>
+              </button>
+
+              <button class="ui-btn">
+                <span onclick="starRepository(`Portfolio-Redesigned`)">
+                  Like
+                </span>
+              </button>
+            </div>
+          </div>
+          <div class="project-preview">
+            <img
+              src="Images/Previews/Old-Portfolio.jpg"
+              alt="Template Portfolio Preview" />
+          </div>
+        </div>
         <div class="flexBox">
           <button class="actionBtn ui-btn" id="Git" onclick="openProjects()">
             <span>All Projects</span>
@@ -1204,6 +1267,14 @@
                     alt="Project Management App Icon" />
                 </a>
                 <p class="project-name">Task App</p>
+              </li>
+              <li>
+                <a href="#TemplatePortfolio">
+                  <img
+                    src="Images/Icons/portfolio.svg"
+                    alt="Template Portfolio Icon" />
+                </a>
+                <p class="project-name">Old Portfolio</p>
               </li>
             </ul>
           </div>
