--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   </head>
   <body>
     <div id="preloader">
-      <div id="Loading">Loading....Please be Patient</div>
+      <div class="loader" id="Loading">
+        <div data-glitch="Loading..." class="glitch">Loading...</div>
+     </div>
     </div>
-    <!-- https://codepen.io/creativeocean/pen/ByBogvj -->
-    <!-- https://codepen.io/benoitwimart/pen/NWxWYYN -->
     <!-------------------------------------------Header Start----------------------------------------------------------------------------------->
     <header>
       <div class="modalBackground" id="passionModal">
