--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="preloader">
       <div class="loader" id="Loading">
         <div data-glitch="Loading..." class="glitch">Loading...</div>
-     </div>
+      </div>
     </div>
     <!-------------------------------------------Header Start----------------------------------------------------------------------------------->
     <header>
@@ -1040,9 +1040,13 @@
             </div>
           </div>
           <div class="project-preview">
-            <img
-              src="Images/Previews/Old-Portfolio.jpg"
-              alt="Template Portfolio Preview" />
+            <a
+              href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
+              target="_blank">
+              <img
+                src="Images/Previews/Old-Portfolio.webp"
+                alt="Template Portfolio Preview" />
+            </a>
           </div>
         </div>
         <div class="flexBox">
