Help Layout Change

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <tbody>
                 <tr>
                   <td class="icon-cell">
-                    <img src="Images/Icons/help.svg" alt="The help icon" />
+                    <img src="Images/Icons/inspect.svg" alt="The help icon" />
                   </td>
                   <td class="description-cell">
                     <p>
@@ -771,7 +771,7 @@
         <div class="flexBox">
           <h2
             class="section-title subTitle bounce"
-            onclick="showNotification(`These projects are ...`,3)">
+            onclick="showNotification(`By clicking the ...`,3)">
             My Projects
           </h2>
         </div>
