Music player integrated
1. Design added

--- a/index.html
+++ b/index.html
@@ -490,6 +490,57 @@
             </div>
           </button>
         </div>
+        <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>.. Music Player <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
+        <div class="music-card">
+          <div class="music-top">
+            <div class="music-pfp">
+              <div class="music-playing">
+                <div class="music-greenline music-line-1"></div>
+                <div class="music-greenline music-line-2"></div>
+                <div class="music-greenline music-line-3"></div>
+                <div class="music-greenline music-line-4"></div>
+                <div class="music-greenline music-line-5"></div>
+              </div>
+            </div>
+            <div class="music-texts">
+              <p class="title-1">Music title here</p>
+              <p class="title-2">Music Artist here</p>
+            </div>
+          </div>
+
+          <div class="music-controls">
+            <img
+              src="Images/Icons/volume.svg"
+              alt="Volume"
+              class="music-icon music-volume_button" />
+
+            <div class="music-volume">
+              <div class="slider">
+                <div class="green"></div>
+              </div>
+              <div class="circle"></div>
+            </div>
+
+            <img
+              src="Images/Icons/previous.svg"
+              alt="Previous"
+              class="music-icon" />
+
+            <img src="Images/Icons/play.svg" alt="Play" class="music-icon" />
+
+            <img src="Images/Icons/next.svg" alt="Next" class="music-icon" />
+
+            <div class="music-air"></div>
+            <img src="Images/Icons/close.svg" alt="Close" class="music-icon" />
+          </div>
+
+          <div class="music-time">
+            <div class="music-elapsed"></div>
+          </div>
+
+          <p class="music-timetext music-time_now">1:31</p>
+          <p class="music-timetext music-time_full">3:46</p>
+        </div>
       </div>
       <nav>
         <ul class="menu">
