--- a/index.html
+++ b/index.html
@@ -1111,6 +1111,10 @@
             <span>All Projects</span>
             <ion-icon name="logo-github"></ion-icon>
           </button>
+          <button class="actionBtn ui-btn" id="Git" onclick="followUser()">
+            <span>Follow</span>
+            <ion-icon name="logo-github"></ion-icon>
+          </button>
         </div>
       </section>
 
