Removede some css classes
1. The old unused ones like Light-button that have no more effect
2. Decreased the amp for bass recognition .. still fine tuning
3. Minor changes for illustration image size

--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
             <span>All Projects</span>
             <ion-icon name="logo-github"></ion-icon>
           </button>
-          <button class="actionBtn ui-btn" id="Git" onclick="followUser()">
+          <button class="actionBtn ui-btn" onclick="followUser()">
             <span>Follow</span>
             <ion-icon name="logo-github"></ion-icon>
           </button>
