--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
             </div>
             <div class="Extra">
               <button
-                class="actionBtn ui-btn Viewpoint Activepoint"
+                class="actionBtn ui-btn Activepoint"
                 id="TechStack"
                 onclick="show('Skills')">
                 <span>Tech Stack</span>
@@ -975,7 +975,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT"
                     target="_blank">
-                    Code
+                    Code🐱‍💻
                   </a>
                 </span>
               </button>
@@ -984,13 +984,13 @@
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT/releases/download/v1.2/CreateIT.zip">
-                    Download
+                    Download🐱‍👤
                   </a>
                 </span>
               </button>
 
               <button class="ui-btn">
-                <span onclick="starRepository(`CreateIT`)">Like</span>
+                <span onclick="starRepository(`CreateIT`)">Like💚</span>
               </button>
             </div>
           </div>
@@ -1034,19 +1034,19 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/ProjectManagementApp-Assignment"
                     target="_blank">
-                    Code
+                    Code🐱‍💻
                   </a>
                 </span>
               </button>
 
               <button class="ui-btn">
-                <span>Unavailable</span>
+                <span>Unavailable😥</span>
               </button>
 
               <button class="ui-btn">
                 <span
                   onclick="starRepository(`ProjectManagementApp-Assignment`)">
-                  Like
+                  Like💚
                 </span>
               </button>
             </div>
@@ -1091,7 +1091,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/Portfolio-Redesigned"
                     target="_blank">
-                    Code
+                    Code🐱‍💻
                   </a>
                 </span>
               </button>
@@ -1101,14 +1101,14 @@
                   <a
                     href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
                     target="_blank">
-                    Site
+                    Site🌍
                   </a>
                 </span>
               </button>
 
               <button class="ui-btn">
                 <span onclick="starRepository(`Portfolio-Redesigned`)">
-                  Like
+                  Like💚
                 </span>
               </button>
             </div>
@@ -1129,7 +1129,7 @@
             <ion-icon name="logo-github"></ion-icon>
           </button>
           <button class="actionBtn ui-btn" onclick="followUser()">
-            <span>Follow</span>
+            <span>Follow Me</span>
             <ion-icon name="logo-github"></ion-icon>
           </button>
         </div>
@@ -1181,6 +1181,24 @@
       <section class="Socials" id="SocialsSection">
         <div class="flexBox">
           <h3 class="subTitle bounce section-title">My Socials</h3>
+        </div>
+        <div class="stories-container">
+          <img
+            src="Images/Me.webp"
+            alt="Life Updates"
+            class="story-icon"
+            data-story="life" />
+          <img
+            src="Images/Passion.webp"
+            alt="Casual Updates"
+            class="story-icon"
+            data-story="casual" />
+        </div>
+
+        <div class="story-viewer hidden">
+          <div class="story-progress-bar"></div>
+          <div class="story-content"></div>
+          <button class="close-story">×</button>
         </div>
         <div class="social-posts-container">
           <a
