--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 class="actionBtn ui-btn Activepoint"
                 id="TechStack"
                 onclick="show('Skills')">
-                <span>Tech Stack</span>
+                <span>Tech</span>
               </button>
 
               <button
@@ -975,7 +975,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT"
                     target="_blank">
-                    Code🐱‍💻
+                    Code
                   </a>
                 </span>
               </button>
@@ -984,13 +984,13 @@
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT/releases/download/v1.2/CreateIT.zip">
-                    Download🐱‍👤
+                    Download
                   </a>
                 </span>
               </button>
 
               <button class="ui-btn">
-                <span onclick="starRepository(`CreateIT`)">Like💚</span>
+                <span onclick="starRepository(`CreateIT`)">Like</span>
               </button>
             </div>
           </div>
@@ -1034,19 +1034,19 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/ProjectManagementApp-Assignment"
                     target="_blank">
-                    Code🐱‍💻
+                    Code
                   </a>
                 </span>
               </button>
 
               <button class="ui-btn">
-                <span>Unavailable😥</span>
+                <span>Unavailable</span>
               </button>
 
               <button class="ui-btn">
                 <span
                   onclick="starRepository(`ProjectManagementApp-Assignment`)">
-                  Like💚
+                  Like
                 </span>
               </button>
             </div>
@@ -1091,7 +1091,7 @@
                   <a
                     href="https://github.com/Passion-Over-Pain/Portfolio-Redesigned"
                     target="_blank">
-                    Code🐱‍💻
+                    Code
                   </a>
                 </span>
               </button>
@@ -1101,14 +1101,14 @@
                   <a
                     href="https://passion-over-pain.github.io/Portfolio-Redesigned/"
                     target="_blank">
-                    Site🌍
+                    Site
                   </a>
                 </span>
               </button>
 
               <button class="ui-btn">
                 <span onclick="starRepository(`Portfolio-Redesigned`)">
-                  Like💚
+                  Like
                 </span>
               </button>
             </div>
