Updated Status feature

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <!-- GSAP CDN link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
+    <!-- Video Js for status videos -->
+    <link
+      href="https://unpkg.com/video.js/dist/video-js.css"
+      rel="stylesheet" />
+    <script src="https://unpkg.com/video.js/dist/video.js"></script>
 
     <title>Tinotenda Mhedziso's portfolio website</title>
   </head>
@@ -1184,12 +1189,12 @@
         </div>
         <div class="stories-container">
           <img
-            src="Images/Me.webp"
+            src="Images/Previews/Professional-cover.webp"
             alt="Life Updates"
             class="story-icon"
             data-story="life" />
           <img
-            src="Images/Passion.webp"
+            src="Images/Previews/Casual-cover.webp"
             alt="Casual Updates"
             class="story-icon"
             data-story="casual" />
