Updated Video Logic

--- a/index.html
+++ b/index.html
@@ -1190,9 +1190,9 @@
         <div class="stories-container">
           <img
             src="Images/Previews/Professional-cover.webp"
-            alt="Life Updates"
+            alt="Professional Updates"
             class="story-icon"
-            data-story="life" />
+            data-story="professional" />
           <img
             src="Images/Previews/Casual-cover.webp"
             alt="Casual Updates"
