--- a/index.html
+++ b/index.html
@@ -880,15 +880,15 @@
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span>Hidden</span>
+                <span onclick="show404()">Hidden</span>
               </button>
 
               <button class="ui-btn">
-                <span>Hidden</span>
+                <span onclick="show404()">Hidden</span>
               </button>
 
               <button class="ui-btn">
-                <span>Hidden</span>
+                <span onclick="show404()">Hidden</span>
               </button>
             </div>
           </div>
@@ -931,15 +931,15 @@
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span>Hidden</span>
+                <span onclick="show404()">Hidden</span>
               </button>
 
               <button class="ui-btn">
-                <span>Hidden</span>
+                <span onclick="show404()">Hidden</span>
               </button>
 
               <button class="ui-btn">
-                <span>Hidden</span>
+                <span onclick="show404()">Hidden</span>
               </button>
             </div>
           </div>
