Bot Configuration -- Errors

--- a/index.html
+++ b/index.html
@@ -1443,12 +1443,18 @@
                     window.botpress.on("webchat:closed", () => {
                       window.parent.postMessage({ action: "closeWebchat" }, "*");
                     });
-                    window.botpress.on("conversation", () => {
-                      window.botpress.sendEvent({
-                        "action" : "myWebsite"
-                      });
-                    });
+                  
                     window.botpress.on("customEvent", (event) => {
+                      if(event.action =="awakenPassion")
+                      {
+                       window.parent.postMessage({ action: "awakenPassion" }, "*");
+                      }
+                      else
+                      if(event.action =="newUser")
+                      {
+                       window.parent.postMessage({ action: "newUser", firstname: event.firstname, lastname: event.lastname}, "*");
+                      }
+                      else
                      if(event.action =="playMusic")
                      {
                       window.parent.postMessage({ action: "playMusic" }, "*");
@@ -1465,6 +1471,14 @@
                           "action" : "contactMe"
                         });
                       }
+                      else
+                      if (event.data.action === "awakened") {
+                        window.botpress.sendEvent({
+                          "action" : "awakened",
+                          "username": `${event.data.username}`,
+                        });
+                      }
+                      else
                       if (event.data.action === "openWebchat") {
                         botpress.open();
                       }
