Updated New Nav
1. Color changes

--- a/index.html
+++ b/index.html
@@ -662,6 +662,10 @@
             <a href="#">Skills</a>
           </li>
           <li>
+            <img src="Images/Icons/follow.svg" alt="Skills Icon" />
+            <a href="#">Socials</a>
+          </li>
+          <li>
             <img src="Images/Icons/animation.svg" alt="Toggle Icon" />
             <a href="#">Toggle Animations</a>
           </li>
