Added New GitHub Icon
1. Navigation hover update

--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@
         <div class="nav-profile">
           <img src="Images/Me.webp" alt="Profile Picture" class="profile-pic" />
           <div class="profile-info">
-            <p class="username">Guest</p>
-            <p class="user-level">Level: Acquaintance</p>
+            <p class="user-name">Guest</p>
+            <p class="user-level">Level: Guest</p>
           </div>
           <button id="nav-close">&times;</button>
         </div>
@@ -1188,11 +1188,11 @@
         <div class="flexBox">
           <button class="actionBtn ui-btn" id="Git" onclick="openProjects()">
             <span>All Projects</span>
-            <ion-icon name="logo-github"></ion-icon>
+            <img src="Images/Icons/github.svg" alt="" />
           </button>
           <button class="actionBtn ui-btn" onclick="followUser()">
             <span>Follow Me</span>
-            <ion-icon name="logo-github"></ion-icon>
+            <img src="Images/Icons/github.svg" alt="" />
           </button>
         </div>
       </section>
