--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@
         <div class="nav-profile">
           <img src="Images/Me.webp" alt="Profile Picture" class="profile-pic" />
           <div class="profile-info">
-            <p id="user-name">Tinotenda Mhedziso</p>
-            <p id="user-level">Level: Master💚💚💚</p>
+            <p id="user-name">Unknown User</p>
+            <p id="user-level">Level: Guest</p>
           </div>
           <button id="nav-close">&times;</button>
         </div>
